integ-tests/tests/snapshots/valid__tables__implicit_array-2.snap
---
source: integ-tests/tests/valid.rs
expression: spans
---
note[string]: root_albums_songs_0_name
  ┌─ implicit_array:2:9
  │
2 │ name = "Glory Days"
  │         ^^^^^^^^^^

note[table]: root_albums_songs_0
  ┌─ implicit_array:1:1
  │  
1 │ ╭ [[albums.songs]]
2 │ │ name = "Glory Days"
  │ ╰───────────────────^

note[array]: root_albums_songs
  ┌─ implicit_array:1:1
  │  
1 │ ╭ [[albums.songs]]
2 │ │ name = "Glory Days"
  │ ╰───────────────────^

note[table]: root_albums
  ┌─ implicit_array:1:3
  │
1 │ [[albums.songs]]
  │   ^^^^^^

note[table]: root
  ┌─ implicit_array:1:1
  │  
1 │ ╭ [[albums.songs]]
2 │ │ name = "Glory Days"
  │ ╰───────────────────^
