integ-tests/tests/snapshots/valid__tables__table_span.snap
---
source: integ-tests/tests/valid.rs
expression: valid_toml
---
{
  "workspace": {
    "members": true,
    "other": false,
    "foo": {
      "bar": 3
    },
    "bar": {
      "inline": {
        "foo": 3
      }
    }
  }
}
